--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Flappy Bird </title>
+    <title>Flappy Bird vol.2 </title>
     <link href="https://fonts.googleapis.com/css?family=Teko:700" rel="stylesheet">
     <style>        
         canvas{
